<resources>
    <string name="app_name">Weather_App</string>
    <string name="action_settings">Settings</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="direction">Direction</string>
    <string name="speed">Speed</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="Location_Activity">Location</string>
    <string name="date">Date</string>
</resources>
